# dcc

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  install.sh
.devcontainer/: base.json  claude.json  devcontainer.json
.github/workflows/: _build-release.yml  autotag.yml  bump.yml  ci.yml  release.yml
readme/: ARCHITECTURE.md  DEVELOPMENT.md  STYLE.md
scripts/: bump.sh
src/: build.rs  cache.rs  cli.rs  docker.rs  exec.rs  forward.rs  join.rs  lifecycle.rs  main.rs  profile.rs  run.rs  script.rs  stop.rs  version.rs  workspace.rs
src/config/: merge.rs  mod.rs  resolve.rs  vars.rs
src/features/: context.rs  local.rs  mod.rs  oci.rs
tests/: cli_flags.rs  config_errors.rs
tests/common/: mod.rs
