[package]
name = "dcc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dcc"
path = "src/main.rs"

[profile.release]
overflow-checks = true

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
flate2 = "1"
indexmap = { version = "2", features = ["serde"] }
json5 = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tar = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
proptest = "1"
tempfile = "3"
